--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,13 @@
 [[source]]
-name = "pypi"
-url = "https://pypi.org/simple"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 verify_ssl = true
+name = "pypi"
 
 [dev-packages]
 
 [packages]
 django = "*"
+markdown = "*"
 
 [requires]
 python_version = "3.7"
