--- a/compose/production/nginx/Django_blog.conf
+++ b/compose/production/nginx/Django_blog.conf
@@ -1,5 +1,5 @@
 upstream Django-blog  {
-    server corn_ming_django_blog:8000;
+    server http://127.0.0.1:8000;
 }
 
 server {
@@ -13,7 +13,7 @@ server {
  
     location / {
         proxy_set_header Host $host;
-	proxy_pass http://127.0.0.1;
+        proxy_pass http://127.0.0.1;
     	proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme; 
