--- a/compose/production/nginx/Django_blog.conf
+++ b/compose/production/nginx/Django_blog.conf
@@ -1,11 +1,11 @@
-upstream Django-blog  {
-    server http://127.0.0.1:8000;
+upstream corn_ming_django_blog {
+    server corn_ming_django_blog:8000;
 }
 
 server {
     charset utf-8;
     listen 80;
-    server_name 121.36.9.37;
+    server_name 127.0.0.1;
  
     location /static {
         alias /home/yuming/app/Django_blog/static;
@@ -13,7 +13,7 @@ server {
  
     location / {
         proxy_set_header Host $host;
-        proxy_pass http://127.0.0.1;
+        proxy_pass http://corn_ming_django_blog;
     	proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme; 
