--- a/production.yml
+++ b/production.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   static:
   database:
+  esdata:
 
 services:
   corn_ming_django_blog:
@@ -32,3 +33,24 @@ services:
     ports:
       - "80:80"
       - "443:443"
+
+  elasticsearch_local:
+    build:
+      context: .
+      dockerfile: ./compose/production/elasticsearch/Dockfile
+    image: corn_ming_django_blog_elasticsearch
+    container_name: corn_ming_django_blog_elasticsearch
+    volumes:
+      - esdata_local:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nproc: 65536
+      nofile:
+        soft: 65536
+        hard: 65536
